<resources>
    <string name="app_name">Not Just a Guide</string>
    <string name="google_maps_API_key">AIzaSyBNXTcn6C44eqWAyA_PS-STOO--zEVaY0w</string>
    <string name="google_places_API_key">AIzaSyCKJviEuFvyA1_0XPF26YceHdH61IEJzLs</string>
    <string name="title_drink">Drink</string>
    <string name="title_nightlife">Nightlife</string>
    <string name="title_trending">Trending</string>
    <string name="title_food">Food</string>
    <string name="title_sports">Sports - Activities</string>
    <string name="action_logo">actionlogo</string>
    <string name="title_activity_food_v2">FoodActivityV2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="food_cover">food_cover</string>
    <string name="title_activity_drink">DrinkActivity</string>
    <string name="drink_cover">drink_cover</string>
    <string name="title_activity_nightlife">NightlifeActivity</string>
    <string name="title_activity_sports">SportsActivity</string>
    <string name="nightlife_cover">nightlife_cover</string>
    <string name="sports_cover">sports_cover</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
